--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
+    "react-to-print": "^2.9.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "uuid": "^8.3.0",
